<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_sound_pool">SoundPoolActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_record_suc">RecordSucActivity</string>

    <!-- 下拉刷新 -->
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开即刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中&#8230;</string>
    <string name="pull_to_refresh_last_updated_tip">上次刷新：</string>
    <string name="tap_to_refresh">重新加载</string>
    <string name="tip_load_failed">加载失败，下拉刷新</string>
    <string name="network_timeout">网络超时</string>
    <string name="network_error_tip">网络连接失败，请检查网络</string>
    <!-- 下拉刷新 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- 自定义下拉刷新 -->
    <string name="pull_to_refresh_update_time_label" translatable="false">上次更新： </string>
    <string name="load_more_label" translatable="false">加载中&#8230;</string>
    <string name="app_name">音诉</string>
    <string name="my">我的</string>
    <string name="hot">热门</string>
    <string name="activity">活动</string>
    <string name="friends">好友</string>

    <!-- 图片浏览 -->
    <string name="only_choose_num">超过本地存储最大个数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="activity_public_flat">公众平台</string>

    <!--  -->
    <string name="no_use_sd_card">没有检测到SD卡</string>
    <string name="images_size">图片数量不可超过9张</string>
    <string name="region_selector">地区选择</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <!--  -->

    <string name="back">返回</string>
    <string name="happy">开心</string>
    <string name="unhappy">伤感</string>
    <string name="indifferent">无所谓</string>
    <string name="title_activity_sing_record">SingRecordActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sing_style">SingStyleActivity</string>
    <string name="exist_for_you">我为你心跳 我为你祈祷\n
因为爱让我们能遇到\n
因为你开始燃烧 痛才慢慢治疗\n
我要和你拥抱\n
甜蜜的手一起去奔跑\n
你存在的这一秒 会不会是我依靠\n
\n
给我的微笑\n
全都记在脑海了\n
变成快乐的符号\n
节奏在跳跃\n
这是恋爱的预兆\n
跳动我每一个细胞\n
天亮才睡着\n
让我思绪都颠倒\n
这次我不想放掉\n
防备全关掉\n
只许你无理取闹\n
慢慢走近你的步调\n
想念一层一层被你融掉\n
一天一天为你改着\n
一秒一秒想你的微笑\n
我为你心跳 我为你祈祷\n
因为爱让我们能遇到\n
因为你开始燃烧 痛才慢慢治疗\n
我要和你拥抱\n
甜蜜的手一起去奔跑\n
你存在的这一秒 会不会是我依靠\n</string>
    <string name="li_byebye">    汽车声打破宁静\n
听得见却看不清\n 
\n 
路灯下我的身影\n 
是最短的距离\n 
\n 
最亲密\n 
\n 
汽车声打破宁静\n 
看着我眼睛 不再透明\n 
\n 
路灯下我的身影\n 
是最短的距离\n 
\n 
最亲密\n 
\n 
我已用尽全身力气\n 
依然不在一个世界里\n 
那么让我最后握紧你的手\n 
一起说\n 
再见再见再见再见再见再见再见\n 
一百遍\n 
如果永远都不再见\n 
\n 
再见再见再见再见再见再见再见\n 
一万遍\n 
如果永远都不再见\n 
\n 
请转过去保持安静\n 
不要看我眼睛\n 
\n 
不再透明\n 
\n 
路灯下你的身影\n 
是最远的距离\n 
\n 
永远的距离\n 
我已用尽全身力气\n 
依然无法阻止忘记\n 
那么让我最后握紧你的手\n 
一起说\n 
再见再见再见再见再见再见再见\n 
一百遍\n 
如果永远都不再见\n 
\n 
再见再见再见再见再见再见再见\n 
一万遍\n 
如果永远都不再见\n 
\n 
再见再见再见再见再见再见再见\n 
一百遍\n 
如果永远都不再见\n 
\n 
再见再见再见再见再见再见再见\n 
一万遍\n 
如果永远都不再见\n 
\n 
再见再见再见再见再见再见再见\n 
一百遍\n 
如果永远都不再见\n 
\n 
再见再见再见再见再见再见再见\n 
一百遍\n 
如果永远都不再见\n 
\n 
再见再见再见再见再见再见再见\n 
一万遍\n 
如果永远都不再见\n 
\n 
再见再见再见再见再见再见再见\n 
一百遍</string>
    <string name="w_nightdj">365天没有一天可以放个假\n
带上监听耳机今夜的party我最大\n
我是午夜DJ 感受我的music\n
快乐时光不能浪费\n
如果我是DJ 你会爱我吗\n
你会爱我吗 你会爱我吗\n
如果我是DJ 你会爱我吗\n
你会爱我吗 你会爱我吗\n
\n
每当夜幕降临我们才睡醒睁开双眼\n
带上我的Apple LV包包背在我左边\n
我是午夜DJ 感受我的music\n
快乐时光不能浪费\n
如果我是DJ 你会爱我吗\n
你会爱我吗 你会爱我吗\n
如果我是DJ 你会爱我吗\n
你会爱我吗 你会爱我吗\n
Rap\：Hello baby I\'m DJ!\n
This time with me feel my music.\n
If i\'m dj will you love me?\n
Come on Together go to party!\n
如果我是一位午夜DJ\n
你是否愿意把我体会\n
想要正式的问你一句\n
你是否会爱上一位DJ\n
\n
如果我是DJ... ...\n
如果我是DJ... ...\n
我是午夜DJ 感受我的music\n
快乐时光不能浪费\n
如果我是DJ 你会爱我吗\n
你会爱我吗 你会爱我吗\n
如果我是DJ 你会爱我吗\n
你会爱我吗 你会爱我吗\n
如果我是DJ 请你爱我吧\n
请你爱我吧 请你爱我吧\n
如果我是DJ 请你爱我吧\n
请你爱我吧 请你爱我吧\n
如果我是DJ... ...\n
如果我是DJ... ...\n
\n
如果我是DJ 请你爱我吧\n
请你爱我吧 请你爱我吧\n
如果我是DJ 请你爱我吧\n
请你爱我吧 请你爱我吧\n
如果我是DJ</string>
    <string name="title_activity_hot_activityt">HotActivityt</string>
    <string name="title_activity_new_ci">NewCiActivity</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_activity_ren_qi">RenQiActivity</string>
    <string name="title_activity_audition">AuditionActivity</string>
    <string name="title_activity_song_style_search">SongStyleSearch</string>
    <string name="title_activity_listen_create">ListenCreateActivity</string>
    <string name="title_activity_write_create">WriteCreateActivity</string>
    <string name="infoactivity3">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;不管你是爱阅读的还是爱电影的；爱音乐的还是爱旅行的；或者只是仰望华丽的45度天空的；只要你是小清新你几时我们要找的人奥，阳春三月，草长莺飞，哼哼小清新来袭。参加哼哼专属活动#一首歌证明我是小清新#，用你清新自然的音乐治愈下这个物欲横流，喧嚣繁杂的大千世界吧。</string>
    <string name="infoactivity4">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;一起逛街，一起当个开心的吃货,一起看剧集,一起花痴某个型男偶像。亲爱的，你跟闺蜜多久了？在你的心里，有没有一首情歌是唱给闺蜜听的？不管你叫她死女人，好朋友，闺蜜，甚至直呼其名，有一些话只有你们两人懂。亲爱的，赶快唱首情歌给闺蜜吧！你送情歌，我送礼物哦！</string>
    <string name="infoactivity5">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;一路风景一路歌，又是一年毕业季，浓情六月，你是否依然记得当年那青葱的匆匆岁月，凤凰花已开，关于青春的故事，等你一起来哼唱！即日起至6月28日，参加青春一起哼唱，超酷露营者户外音箱、手机话费等你来拿哦~</string>
    <string name="infoactivity6">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;爸爸，用宽阔的肩膀撑起了整个家，其实他是一个外表坚强内心柔弱的男人！ 父亲节之际，用歌声唱出你对父亲的爱吧！</string>
    <string name="infoactivity7">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;炎炎夏日，没有音乐激情何处释放?在劲爆的摇滚乐下，尽情狂欢，挥汗如雨，这该是何等酣畅爽快!这个夏天，小哼约你一起high起来，让音乐带你放飞一整个夏天。 即日起至8月17日上午11点，参加#有一种声音叫做夏天#，小米手环，手机话费等你来拿哦~</string>
    <string name="title_activity_songer_main">SongerMainActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_data">DataActivity</string>

</resources>
