<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/app_split_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/selected_bg_btn_tab_my"
            android:gravity="center"
            android:text="@string/my"
            android:textColor="@color/bg_btn_tab_text_red_selected" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/selected_bg_btn_tab_hot"
            android:gravity="center"
            android:text="@string/hot"
            android:textColor="@color/bg_btn_tab_text_red_selected" />

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:src="@drawable/record_prepare" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/selected_bg_btn_tab_activity"
            android:gravity="center"
            android:text="@string/activity"
            android:textColor="@color/bg_btn_tab_text_red_selected" />

        <TextView
            android:id="@+id/tv4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableTop="@drawable/selected_bg_btn_tab_friends"
            android:gravity="center"
            android:text="@string/friends"
            android:textColor="@color/bg_btn_tab_text_red_selected" />
    </LinearLayout>

</LinearLayout>